2003-03-07  Zoran Vasiljevic <zoran@archiware.com>
	
	* include/ns.h:
	* nscgi/nscgi.c:
	* nscp/nscp.c:
	* nsd/adpeval.c:
	* nsd/adpparse.c:
	* nsd/binder.c:
	* nsd/config.c:
	* nsd/conn.c:
	* nsd/connio.c:
	* nsd/dns.c:
	* nsd/driver.c:
	* nsd/dstring.c:
	* nsd/encoding.c:
	* nsd/fastpath.c:
	* nsd/index.c:
	* nsd/info.c:
	* nsd/lisp.c:
	* nsd/listen.c:
	* nsd/log.c:
	* nsd/modload.c:
	* nsd/nsmain.c:
	* nsd/pidfile.c:
	* nsd/queue.c:
	* nsd/request.c:
	* nsd/rollfile.c:
	* nsd/sched.c:
	* nsd/sockcallback.c:
	* nsd/tclatclose.c:
	* nsd/tclfile.c:
	* nsd/tclhttp.c:
	* nsd/tclimg.c:
	* nsd/tclinit.c:
	* nsd/tcljob.c:
	* nsd/tclmisc.c:
	* nsd/tclshare.c:
	* nsd/tclsock.c:
	* nsd/tclvar.c:
	* nsd/tclxkeylist.c:
	* nsd/urlencode.c:
	* nsd/urlspace.c:
	* nsdb/dbinit.c:
	* nsdb/dbtcl.c:
	* nsext/nsext.c:
	* nslog/nslog.c:
	* nspd/log.c:
	* nspd/main.c:
	* nsperm/nsperm.c:
	* nsthread/mutex.c:
	* nsthread/nsthreadtest.c:
	* nsthread/pthread.c: 
	  o. removed unused variables
	  o. fixed warnings about non-initialized vars
	  o. CONST-ified according to Tcl 8.4+ rules
	
	* bin/init.tcl: _ns_getscript forces import of 
  	  namespaced commands

	* tcl/init.tcl: sets auto_path to start with 
	  our private library first
	
	* include/Makefile.global.in: allows for building 
	  with Solaris 2.6 and later
 
2003-03-06  Mark Page  <mpagenva@aol.com>

	* nsd/adpeval.c: Change defn of objs field of InterpPage to size
	1, since some compilers don't like 0 sized arrays.

	* nsd/urlencode.c: 
	* nsd/queue.c:
	* nsd/server.c:
	* nsd/urlencode.c:
	* nsd/encoding.c:
	* nsd/nsd.h:
	* nsd/form.c:
	* nsd/conn.c:
	* include/ns.h:
	* tcl/form.tcl:
	* tcl/charsets.tcl(new): Added Tcl I18N support functions from
	OACS, with some changes to work within 4.0.

2003-03-05  Zoran Vasiljevic <zoran@archiware.com>

	* nsd/init.tcl: added handling of commands imported from
	  other namespaces in _ns_getscript procedure.

2003-03-05  Mark Page  <mpagenva@aol.com>
